# LiteStar_Crud

./: .gitignore  README.md  entrypoint.sh  example.env  pyproject.toml
docker/: Dockerfile  compose.yml
migrations/: env.py
migrations/versions/: 69fe4c5ae80a_init.py  8a5598527f23_init.py
src/: app.py
src/adapters/repositories/: sql_user_repository.py
src/application/uow/: utit_of_work.py
src/domain/entities/: user.py
src/domain/ports/: user_repository.py
src/domain/specifications/: user_specs.py
src/infrastructure/: config.py
src/infrastructure/db/: database.py  models.py
src/presentation/: api.py  exceptions.py
src/presentation/routers/: user.py  users.py
