[tool.poetry]
name = "litestar-crud"
version = "0.1.0"
description = ""
authors = ["Sergei Firsov <sergey.firsov@aisa.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {version = ">=2", extras = ["standard"]}
python-dotenv = ">=1"
litestar-granian = "^0.12.2"
litestar-asyncpg = "^0.3.0"
advanced-alchemy = ">0.20"
msgspec = ">=0.18.6"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
